--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_BLOCKFROST_PROJECT_ID=mainnetthisIsaFakeApiKey
-NEXT_PUBLIC_BASE_API=https://cardano-mainnet.blockfrost.io/api/v0 
+NEXT_PUBLIC_BASE_API=https://cardano-mainnet.blockfrost.io/ 
