--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "17.0.2",
     "react-middle-ellipsis": "^1.2.1",
     "sass": "^1.38.0"
