implemented-burning-and-minting

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BLOCKFROST_PROJECT_ID=mainnetthisIsaFakeApiKey
 NEXT_PUBLIC_BLOCKFROST_PROJECT_ID_TESTNET=testnetthisIsaFakeApiKey
 NEXT_PUBLIC_BASE_API=https://cardano-mainnet.blockfrost.io/ 
+NEXT_PUBLIC_SERVER_API
