--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@blockfrost/blockfrost-js": "^2.0.1",
-    "@chakra-ui/icons": "^1.0.16",
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@emurgo/cardano-serialization-lib-asmjs": "^9.1.0",
-    "@emurgo/cardano-serialization-lib-browser": "^9.1.2",
+    "@emurgo/cardano-serialization-lib-browser": "10.0.0-beta.8",
     "axios": "^0.21.1",
     "easy-peasy": "^5.0.4",
     "framer-motion": "^4.1.17",
