--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Jumping off point for viewing the Cardano Nami Wallet within a Nextjs Application. With ChakraUI & Sass",
   "homepage": "https://github.com/MiCurran/Nextjs-NamiWallet-Boilerplate",
   "private": true,
-  "engines" : { "node" : ">=0.14" },
-  "engineStrict" : true ,
+  "engines": {
+    "node": ">=0.14"
+  },
+  "engineStrict": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,6 +24,7 @@
     "@emurgo/cardano-serialization-lib-browser": "10.0.0-beta.8",
     "axios": "^0.21.1",
     "easy-peasy": "^5.0.4",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
@@ -32,7 +35,8 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "typescript": "^4.5.4"
   },
   "author": "Miichael Curran",
   "license": "MIT"
